--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ nav:
     href:           "/publication"
   - name:           "people"
     href:           "/people"
-  - name:           "blog"
-    href:           "/blog"
   - name:           "resources"
     href:           "/resources"
+  - name:           "contact"
+    href:           "/contact"
 
 # Sass
 sass:
